Fix Week View Page Spacing

--- a/src/Pages/Schedule/Schedule.module.css
+++ b/src/Pages/Schedule/Schedule.module.css
@@ -26,6 +26,7 @@
 }
 
 .HabitCard{
+    margin: 6px;
     height: 128px;
     flex-grow: 0;
 }
